feat base.html 및 모든 html favicon 및 이름 통일

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Piro Match{% endblock %}</title>
+    <link rel="icon" type="image/icon" href="{% static 'images/piro_logo.ico' %}">
 
     <style>
         body {
