필요 없는 사이트 제목 코드 제거

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Piro Match{% endblock %}</title>
+    <title>Piro Match</title>
     <link rel="icon" type="image/icon" href="{% static 'images/piro_logo.ico' %}">
 
     <style>
