--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Piro Match{% endblock %}</title>
+    <title>Piro Match</title>
 
     <style>
         body {
