--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -78,9 +78,7 @@
 <body>
     <header>
         <a href="{% url 'weeks:weeks_list' %}" class="brand">
-            <div class="logo">
-                <span></span><span></span><span></span><span></span>
-            </div>
+            <img src="{% static 'images/piro_logo.png' %}" alt="PiroMatch Logo" class="logo-img">
             <div class="title">PiroMatch</div>
         </a>
         <nav>
