반응형만 확인

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -78,7 +78,9 @@
 <body>
     <header>
         <a href="{% url 'weeks:weeks_list' %}" class="brand">
-            <img src="{% static 'images/piro_logo.png' %}" alt="PiroMatch Logo" class="logo-img">
+            <div class="logo">
+                <span></span><span></span><span></span><span></span>
+            </div>
             <div class="title">PiroMatch</div>
         </a>
         <nav>
