진짜 진짜 진짜 최종

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -4,7 +4,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Piro Match{% endblock %}</title>
+    <title>Piro Match</title>
+    <link rel="icon" type="image/icon" href="{% static 'images/piro_logo.ico' %}">
 
     <style>
         body {
@@ -65,6 +66,7 @@
         nav a {
             font-size: 16px;
             opacity: .9;
+            transition: color 0.3s ease, opacity 0.3s ease;
         }
 
         nav a:hover {
@@ -83,13 +85,14 @@
 <body>
     <header>
         <a href="{% url 'weeks:weeks_list' %}" class="brand">
-            <div class="logo">
-                <span></span><span></span><span></span><span></span>
-            </div>
+            <img src="{% static 'images/piro_logo.png' %}" alt="PiroMatch Logo" class="logo-img">
+            
             <div class="title">PiroMatch</div>
         </a>
         <nav>
-            <a href="{% url 'members:member_list' %}" class="{% if request.resolver_match.app_name == 'members' %}active{% endif %}">
+             <a href="{% url 'members:member_list' %}" class="{% if request.resolver_match.app_name == 'members' %}active{% endif %}">
+                멤버 관리
+            </a>
         </nav>
     </header>
 
